--- a/src/AureliaVS2015/src/views/welcome.html
+++ b/src/AureliaVS2015/src/views/welcome.html
@@ -1,8 +1,8 @@
 ﻿<template>
-    <section>
+    <section class="au-animate">
         <h2>${heading}</h2>
 
-        <form role="form" submit.delegate="welcome()">
+        <form role="form" submit.delegate="submit()">
             <div class="form-group">
                 <label for="fn">First Name</label>
                 <input type="text" value.bind="firstName" class="form-control" id="fn" placeholder="first name">
@@ -13,7 +13,7 @@
             </div>
             <div class="form-group">
                 <label>Full Name</label>
-                <p class="help-block">${fullName}</p>
+                <p class="help-block">${fullName | upper}</p>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
